expose requirements via json api
